update task invariant research (missing arxiv)

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -688,8 +688,7 @@ blockquote {
 .lazy-bg {
   background-image: none !important;
 }
-.lazy-placeholder:not(section),
-.lazy-none {
+.lazy-placeholder:not(section) {
   display: block;
   position: relative;
   padding-bottom: 56.25%;
@@ -2775,4 +2774,498 @@ section.lazy-placeholder:after {
 }
 .cid-rJTbwxphx1 .mbr-text {
   color: #232323;
+}
+.cid-rTlYX5L7kF .navbar {
+  padding: .5rem 0;
+  background: #465052;
+  transition: none;
+  min-height: 77px;
+}
+.cid-rTlYX5L7kF .navbar-dropdown.bg-color.transparent.opened {
+  background: #465052;
+}
+.cid-rTlYX5L7kF a {
+  font-style: normal;
+}
+.cid-rTlYX5L7kF .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-rTlYX5L7kF .nav-item a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+}
+.cid-rTlYX5L7kF .nav-item:focus,
+.cid-rTlYX5L7kF .nav-link:focus {
+  outline: none;
+}
+.cid-rTlYX5L7kF .btn {
+  padding: 0.4rem 1.5rem;
+  display: inline-flex;
+  align-items: center;
+}
+.cid-rTlYX5L7kF .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-rTlYX5L7kF .menu-logo {
+  margin-right: auto;
+}
+.cid-rTlYX5L7kF .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  align-items: center;
+}
+.cid-rTlYX5L7kF .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: -webkit-flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-rTlYX5L7kF .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-rTlYX5L7kF .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-rTlYX5L7kF .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-rTlYX5L7kF .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-rTlYX5L7kF .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-rTlYX5L7kF .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-rTlYX5L7kF .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-rTlYX5L7kF .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-rTlYX5L7kF .dropdown .dropdown-menu {
+  background: #465052;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-rTlYX5L7kF .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-rTlYX5L7kF .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-rTlYX5L7kF .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-rTlYX5L7kF .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-rTlYX5L7kF .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-rTlYX5L7kF .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-rTlYX5L7kF .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-rTlYX5L7kF .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-rTlYX5L7kF .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-rTlYX5L7kF .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-rTlYX5L7kF .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-rTlYX5L7kF button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-rTlYX5L7kF button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-rTlYX5L7kF button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #efefef;
+}
+.cid-rTlYX5L7kF button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-rTlYX5L7kF button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rTlYX5L7kF button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rTlYX5L7kF button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-rTlYX5L7kF nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rTlYX5L7kF nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-rTlYX5L7kF nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-rTlYX5L7kF nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rTlYX5L7kF .collapsed.navbar-expand {
+  flex-direction: column;
+}
+.cid-rTlYX5L7kF .collapsed .btn {
+  display: flex;
+}
+.cid-rTlYX5L7kF .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-rTlYX5L7kF .collapsed .navbar-collapse.collapsing,
+.cid-rTlYX5L7kF .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-rTlYX5L7kF .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-rTlYX5L7kF .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-rTlYX5L7kF .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-rTlYX5L7kF .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-rTlYX5L7kF .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-rTlYX5L7kF .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
+.cid-rTlYX5L7kF .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-rTlYX5L7kF .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-rTlYX5L7kF .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-rTlYX5L7kF .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-rTlYX5L7kF .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-rTlYX5L7kF .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-rTlYX5L7kF .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rTlYX5L7kF .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-rTlYX5L7kF .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-rTlYX5L7kF .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-rTlYX5L7kF .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-rTlYX5L7kF .navbar-expand {
+    flex-direction: column;
+  }
+  .cid-rTlYX5L7kF img {
+    height: 3.8rem !important;
+  }
+  .cid-rTlYX5L7kF .btn {
+    display: flex;
+  }
+  .cid-rTlYX5L7kF button.navbar-toggler {
+    display: block;
+  }
+  .cid-rTlYX5L7kF .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-rTlYX5L7kF .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rTlYX5L7kF .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-rTlYX5L7kF .navbar-collapse.collapsing,
+  .cid-rTlYX5L7kF .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-rTlYX5L7kF .navbar-collapse.collapsing .navbar-nav,
+  .cid-rTlYX5L7kF .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-rTlYX5L7kF .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-rTlYX5L7kF .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-rTlYX5L7kF .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-rTlYX5L7kF .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rTlYX5L7kF .navbar-collapse.collapsing .navbar-buttons,
+  .cid-rTlYX5L7kF .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-rTlYX5L7kF .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-rTlYX5L7kF .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rTlYX5L7kF .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-rTlYX5L7kF .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-rTlYX5L7kF .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-rTlYX5L7kF .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-rTlYX5L7kF .menu-logo {
+    flex-shrink: 0;
+  }
+}
+.cid-rTlYX5L7kF .navbar-collapse {
+  flex-basis: auto;
+}
+.cid-rTlYX5L7kF .nav-link:hover,
+.cid-rTlYX5L7kF .dropdown-item:hover {
+  color: #c1c1c1 !important;
+}
+.cid-rTlYX6FDxK {
+  padding-top: 120px;
+  padding-bottom: 0px;
+  background-color: #efefef;
+}
+.cid-rTlYX6FDxK .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rTlYX6YAsq {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background-color: #efefef;
+}
+.cid-rTlYX6YAsq .mbr-section-subtitle,
+.cid-rTlYX6YAsq .mbr-text {
+  color: #767676;
+}
+.cid-rTlYX6YAsq .card {
+  display: -webkit-flex;
+  position: relative;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-rTlYX6YAsq .card-wrapper {
+  height: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-rTlYX6YAsq .card-wrapper .card-img {
+  display: -webkit-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  -webkit-flex-direction: column;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-rTlYX6YAsq .card-wrapper .card-img .mbr-overlay {
+  background-color: #ffffff;
+  display: none;
+  transition: opacity .3s;
+}
+.cid-rTlYX6YAsq .card-wrapper .card-img .mbr-section-btn {
+  position: absolute;
+  transition: opacity .3s;
+  width: 100%;
+  left: 0;
+  top: 50%;
+  height: auto;
+  transform: translateY(-50%);
+}
+.cid-rTlYX6YAsq .card-wrapper .card-img img {
+  width: 100%;
+}
+.cid-rTlYX6YAsq .card-wrapper .card-box {
+  background-color: #ffffff;
+  padding: 0 2rem 2rem 2rem;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.cid-rTlYX6YAsq .card-wrapper .card-box h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  padding-top: 2rem;
+}
+.cid-rTlYX6YAsq .card-wrapper .card-box p {
+  margin-bottom: 0;
+  padding-top: 1.5rem;
+}
+.cid-rTlYX6YAsq .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+}
+.cid-rTlYX6YAsq .card-img .mbr-overlay {
+  display: block !important;
+  opacity: 0;
+}
+.cid-rTlYX6YAsq .card-img .mbr-section-btn {
+  opacity: 0;
+}
+.cid-rTlYX6YAsq .card-img:hover .mbr-overlay {
+  opacity: .5;
+}
+.cid-rTlYX6YAsq .card-img:hover .mbr-section-btn {
+  opacity: 1;
+}
+.cid-rTlYX6YAsq .mbr-section-subtitle DIV {
+  text-align: left;
+}
+.cid-rTlYX6YAsq .mbr-section-subtitle {
+  text-align: left;
+  color: #232323;
+}
+.cid-rTlYX6YAsq .mbr-section-title {
+  text-align: left;
+}
+.cid-rTlYX6YAsq .card-title DIV {
+  text-align: left;
+}
+.cid-rTlYX6YAsq .card-title {
+  text-align: left;
 }
